# Timezone_bot

./: .gitignore  README.md  configuration.yaml  deploy_aws.py  env.example  main.py  progress.md  pyproject.toml  pytest.ini  run.sh
.agent/: CONSTITUTION.md
ai_driven_analysis/: CODE_REVIEW_V3.md  code_review_2026-02-03.md  documentation_audit_2026-02-03.md  spec_analysis_final_delivery_2026-01-30.md  spec_analysis_fresh_2026-01-29.md  spec_analysis_v3_2026-01-29.md  spec_audit_final.md
docs/: AI-asisstance_approach.md  CODE_REVIEW.md  HANDOVER.md  ONBOARDING.md  TEST.md
journal/: 01_scope_and_MVP.md  02_capture_logic.md  03_transformation_specs.md  04_bot_logic.md  05_storage.md  06_city_to_timezone.md  07_response_format.md  08_telegram_commands.md  09_logging.md  10_testing_strategy.md  11_implementation_mapping.md  12_discord_integration.md  12_nlp_fuzzy_capture.md  13_event_detection.md  13_event_detection.schema.json  14_llm_module.md  14_llm_module.schema.json  15_onboarding_capture.md  16_ux_onboarding_spec.md  PROGRESS.md  roadmap.md  spec_analysis_2026-01-29.md  spec_analysis_v2_2026-01-29.md
src/: capture.py  commands.py  config.py  discord_main.py  formatter.py  geo.py  logger.py  main.py  middleware.py  storage.py  transform.py  unified_main.py  utils.py
tests/: conftest.py  langsmith_test.py  test_capture.py  test_capture_nlp.py  test_cleanup.py  test_concurrency_multi_user.py  test_discord_events.py  test_discord_extended.py  test_discord_handlers.py  test_discord_on_message.py  test_event_detection.py  test_exceptions_logging.py  test_formatter.py  test_fsm_cancellation.py  test_geo.py  test_handlers.py  test_integration.py  test_lazy_onboarding.py  test_prefilter.py  test_soft_onboarding_new.py  test_storage.py  test_storage_pending.py  test_transform.py  test_utils.py  (+1 more)
(+54 files in other folders)
