[project]
name = "timezone-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "dateparser>=1.2.2",
    "geopy>=2.4.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "timezonefinder>=8.2.1",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
