[project]
name = "timezone-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "discord-py>=2.6.4",
    "geopy>=2.4.1",
    "groq>=1.1.1",
    "instructor>=1.14.5",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "timezonefinder>=8.2.1",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]
